2011-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source\NSCalendarDate.m:
	* Source\NSArray.m:
	* Source\NSDebug.m:
	* Source\NSCalendar.m:
	* Source\NSURLResponse.m:
	* Source\NSObject.m:
	* Source\NSDecimalNumber.m:
	* Source\Additions\GSMime.m:
	* Source\NSDateFormatter.m:
	* Source\NSDate.m:
	* Source\NSDictionary.m:
	* Source\NSSet.m:
	* Headers\Foundation\NSCalendarDate.h:
	* Headers\Foundation\NSDecimalNumber.h:
	* Headers\Foundation\NSDate.h:
	* Headers\Foundation\NSArray.h:
	* Headers\Foundation\NSDictionary.h:
	* Headers\Foundation\NSSet.h:
	Tweaks to avoid compiler warnings on mingw and to make the
	-descriptionWithLocale: method consistently take an id argument
	as it now does on OSX.

2011-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix bugs in upper and lower casing of constant
	strings.
	* Source/NSTask.m: Force check of termination status when we call
	-isRunning.

2011-02-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GSFFIInvocation.m (gs_find_best_typed_sel): Implemented
	for __GNU_LIBOBJC__.  Tidied up documentation.

2011-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Make private executable path be an absolute path.
	* Source/NSDateFormatter.m:
	* Source/NSLocale.m:
	* Source/NSNumberFormatter.m:
	* Source/NSTimeZone.m:
	Remove a few bogus underscores (pointed out by David) which could
	potentially cause problems with compiler/linker etc.
	
2011-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Modified stringByStandardizingPath and
	stringByDeletingLastPathComponent to better match OSX behavior.

2011-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m:
	* Headers/Foundation/NSNumberFormatter.h:
	If we don't have ICU then the actual behavior is 10.0 style
	irrespective of the formatter behavior setting.

2011-02-21 11:05  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/GSFFIInvocation.m: Some changes to method